@@ -33,6 +33,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|text
+operator|.
+name|DateFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|text
+operator|.
+name|SimpleDateFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|*
@@ -1144,6 +1164,15 @@ name|lastReport
 init|=
 literal|""
 decl_stmt|;
+name|SimpleDateFormat
+name|dateFormat
+init|=
+operator|new
+name|SimpleDateFormat
+argument_list|(
+literal|"yyyy-MM-dd hh:mm:ss,SSS"
+argument_list|)
+decl_stmt|;
 while|while
 condition|(
 operator|!
@@ -1188,6 +1217,19 @@ literal|null
 decl_stmt|;
 name|report
 operator|=
+name|dateFormat
+operator|.
+name|format
+argument_list|(
+name|Calendar
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|getTime
+argument_list|()
+argument_list|)
+operator|+
 literal|" map = "
 operator|+
 name|Math
